# webls

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  poetry.toml  pyproject.toml  requirements.txt  setupdemo.sh  setupstorage.sh  tests.py  webls.py
demo/: broken.txt
requirements/: production.txt  test.txt
scripts/: export-pip-requirements.sh  setup-storage.sh
storage/: large.txt
templates/: crumbs.html  dir.html  file.html  forbidden.html  main.css  not_found.html  styles.html
